[package]
name = "haha"
version = "0.1.0"
edition = "2021"

[lib]
name = "erlog_utils"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[dependencies.pyo3]
version = "0.18.0"
features = ["abi3-py37"]